--- a/downloads.html
+++ b/downloads.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,6 +27,28 @@
             background-color: #ddd;
             color: black;
         }
+        
+        /* Styling for the pretty button */
+        .pretty-button {
+            background-color: orange;
+            color: white;
+            text-align: center;
+            padding: 15px 30px;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+            font-size: 18px;
+            font-weight: bold;
+            text-transform: uppercase;
+            transition: background-color 0.3s ease;
+            margin-top: 50px; /* Adjust the margin as needed */
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .pretty-button:hover {
+            background-color: #ff8c00; /* Darker orange on hover */
+        }
     </style>
 </head>
 <body>
@@ -38,6 +59,8 @@
     <a href="downloads.html">Downloads</a>
 </div>
 
+<!-- Pretty Button -->
+<button class="pretty-button">Download aimbot</button>
 
 </body>
 </html>
