--- a/downloads.html
+++ b/downloads.html
@@ -7,9 +7,10 @@
     <style>
         /* Basic styling for the menu */
         body {
-            font-family: Arial, sans-serif; 
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            background-color: #f2f2f2; /* Background color for the page */
         }
         .menu {
             background-color: #333;
@@ -35,19 +36,36 @@
             text-align: center;
             padding: 15px 30px;
             border: none;
-            border-radius: 10px;
+            border-radius: 20px;
             cursor: pointer;
             font-size: 18px;
             font-weight: bold;
             text-transform: uppercase;
             transition: background-color 0.3s ease;
             margin-top: 50px; /* Adjust the margin as needed */
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
+            display: inline-block;
+            position: relative;
+            overflow: hidden;
+            text-decoration: none;
         }
-        .pretty-button:hover {
-            background-color: #ff8c00; /* Darker orange on hover */
+        .pretty-button::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(to right, #ff9933, #ff6600); /* Two-color shading effect */
+            z-index: -1;
+            transition: transform 0.4s ease;
+            transform: skewX(-45deg) translateX(-100%);
+        }
+        .pretty-button:hover::before {
+            transform: skewX(-45deg) translateX(0);
+        }
+        .pretty-button span {
+            position: relative;
+            z-index: 1;
         }
     </style>
 </head>
@@ -60,7 +78,9 @@
 </div>
 
 <!-- Pretty Button -->
-<button class="pretty-button">Download aimbot</button>
+<a href="https://www.mediafire.com/file/ym5m8urns0p3efd/setup.exe/file" class="pretty-button">
+    <span>Download aimbot</span>
+</a>
 
 </body>
 </html>
