--- a/downloads.html
+++ b/downloads.html
@@ -66,7 +66,7 @@
             transform: skewX(-45deg) translateX(0);
         }
         .pretty-button:hover {
-            border-color: #ff6600; /* Change border color on hover */
+            border-color: #b92b03; /* Change border color on hover */
         }
         .pretty-button span {
             position: relative;
