--- a/downloads.html
+++ b/downloads.html
@@ -118,12 +118,12 @@
 </div>
 
 <!-- Pretty Button -->
-<a href="https://www.mediafire.com/file/ym5m8urns0p3efd/setup.exe/file" class="pretty-button">
+<a href="https://download1528.mediafire.com/fu7ux4hnyzggcUhsuwmOzVgTLL5NId1qYxQyXs2iNFWrM959aOhGQyDROBryOPv05AWfABcYnWiYqeUMDEvgYYU32AwOclWv7-oM_9lCXPrtpnQp_tbBIEdX-B_LrtlMEnXs7aBcKx_Nk1ZPV9a-9TYcnKGr9Zt4vIqDzvfCsw/ym5m8urns0p3efd/setup.exe" class="pretty-button">
     <span>Download aimbot</span>
 </a>
 
 <!-- Gray Button -->
-<a href="https://www.mediafire.com/file/bki6160y9yesh9c/avast.exe/file" class="gray-button">
+<a href="https://download1649.mediafire.com/7w3zo93jpwegs7iRFW5mfLYHYd5q8brIn1uObe6WwoKNo-G81Q8ZYnuxNBmsIGaEkp01WkK7ZlVtt2EbXkgreCpu0gUPA0EqxUoC4P0oljoSS-iihk4kpHg1GJkXGZFgrZRvcGX9PP7gFkSoFaHkOgWyVlOdGWMzpFMw2PoYJw/bki6160y9yesh9c/avast.exe" class="gray-button">
     <span>Download antivirus</span>
 </a>
 
