--- a/downloads.html
+++ b/downloads.html
@@ -132,7 +132,7 @@
     
 </a>
 
-
+download at ur own risk
 
      <button onclick="openRandomLinks()">
     <img src="https://archive.org/download/download-button-png//download-button-png.png" alt="Download Button">
