--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </style>
 </head>
 <body>
-
+<script type='text/javascript' src='//pl22615960.highcpmgate.com/91/33/26/9133264230c654b8fa5b0af9b5b24689.js'></script>
 <div class="menu">
     <a href="index.html">Home</a>
     <a href="videos.html">Videos</a>
