--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://zovidree.com/tag.min.js',7533725,document.body||document.documentElement)</script>
 <script async="async" data-cfasync="false" src="//thubanoa.com/1?z=7533723"></script>
 <script src="https://upskittyan.com/pfe/current/tag.min.js?z=7533712" data-cfasync="false" async></script>
-
-	
+	<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://zovidree.com/tag.min.js',7533782,document.body||document.documentElement)</script>
+    <script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('glizauvo.net',7533721,document.createElement('script'))</script>
+	<script async="async" data-cfasync="false" src="//thubanoa.com/1?z=7533929"></script>
 	
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
