--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </div>
 
 
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9082365320052367"
+     crossorigin="anonymous"></script>
 
 
 
