--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9082365320052367"
      crossorigin="anonymous"></script>
-
+<meta name="ppck-ver" content="ad61e781776584eaed5014b61302dfb2" />
 
 
 
