--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>This is the home page of my website.</p>
 </div>
 
-
+<meta name="6a97888e-site-verification" content="3cf45c6e3a71535ee032f069d3ac2ed2">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9082365320052367"
      crossorigin="anonymous"></script>
 <meta name="ppck-ver" content="ad61e781776584eaed5014b61302dfb2" />
