--- a/index.html
+++ b/index.html
@@ -53,7 +53,15 @@
  <ins class="eas6a97888e35" data-zoneid="5315018"></ins> 
  <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
 	
-	
+	<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+ <ins class="eas6a97888e2" data-zoneid="5315022" data-keywords="download"></ins> 
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
+	<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+ <ins class="eas6a97888e2" data-zoneid="5315022" data-keywords="download"></ins> 
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
+	<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+ <ins class="eas6a97888e2" data-zoneid="5315022" data-keywords="download"></ins> 
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
 	
 	<script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('ofleafeona.com',7533721,document.createElement('script'))</script>
 	<script src="https://alwingulla.com/88/tag.min.js" data-zone="68483" async data-cfasync="false"></script>
