--- a/index.html
+++ b/index.html
@@ -50,6 +50,18 @@
 </head>
 <body>
   <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+ <ins class="eas6a97888e17" data-zoneid="5315032" data-keywords="download, software, file, vpn, virus"></ins> 
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
+	  <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+ <ins class="eas6a97888e17" data-zoneid="5315032" data-keywords="download, software, file, vpn, virus"></ins> 
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
+	  <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+ <ins class="eas6a97888e17" data-zoneid="5315032" data-keywords="download, software, file, vpn, virus"></ins> 
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
+	
+	
+	
+	<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
  <ins class="eas6a97888e6" data-zoneid="5315024"></ins> 
  <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
 	<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
