--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
  <ins class="eas6a97888e35" data-zoneid="5315038"></ins> 
  <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
 	
+	<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+ <ins class="eas6a97888e20" data-zoneid="5315052"></ins> 
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
+
 	
 	
 	
