--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
     </style>
 </head>
 <body>
+
+	<script async="async" data-cfasync="false" src="//thubanoa.com/1?z=7534228"></script>
+
+	<script async="async" data-cfasync="false" src="//thubanoa.com/1?z=7533723"></script>
+
+	<script src="https://alwingulla.com/88/tag.min.js" data-zone="68483" async data-cfasync="false"></script>
+
+	
  <script async type="application/javascript" src="https://a.pemsrv.com/ad-provider.js"></script> 
  <ins class="eas6a97888e35" data-zoneid="5315018"></ins> 
  <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
