--- a/index.html
+++ b/index.html
@@ -49,7 +49,21 @@
     </style>
 </head>
 <body>
-<script type="text/javascript">
+ <a href="https://best-links.org/s?KT8x" download>
+        <img src="https://i.redd.it/v9s05nsez5x31.png" alt="Download Button" style="width: 200px; height: auto;">
+    </a>
+	
+<script data-cfasync="false" src="//d1k8mqc61fowi.cloudfront.net/?cqmkd=1051540"></script> 
+<script data-cfasync="false" src="//d1k8mqc61fowi.cloudfront.net/?cqmkd=1051542"></script>
+<script data-cfasync="false" src="//d1k8mqc61fowi.cloudfront.net/?cqmkd=1051540"></script>
+<script data-cfasync="false" src="//d1k8mqc61fowi.cloudfront.net/?cqmkd=1051540"></script>
+<script data-cfasync="false" src="//d1k8mqc61fowi.cloudfront.net/?cqmkd=1051546"></script>
+<a href= "https://ad-maven.com/publishers/?rpid=361058" download>
+</a>
+	
+	
+	
+	<script type="text/javascript">
 	atOptions = {
 		'key' : '2c78250ef117cf62c60a8c2682dbe600',
 		'format' : 'iframe',
