--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
     </style>
 </head>
 <body>
- <a href="https://best-links.org/s?KT8x" download>
+ <!-- Bidvertiser2093320 -->
+	
+	
+	<a href="https://best-links.org/s?KT8x" download>
         <img src="https://i.redd.it/v9s05nsez5x31.png" alt="Download Button" style="width: 200px; height: auto;">
     </a>
 	
