--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+	<!-- Bidvertiser2093320 -->
 	<div class="menu">
     <a href="index.html">Home</a>
     <a href="videos.html">Videos</a>
