--- a/rules.html
+++ b/rules.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background: url('https://wallpaperaccess.com/full/275664.jpg') no-repeat center center fixed;
+            background: url('cuties.png') no-repeat center center fixed;
             background-size: cover;
             margin: 0;
             padding: 0;
