--- a/rules.html
+++ b/rules.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background: url('cuties.png') no-repeat center center fixed;
+            background: url('sdsd') no-repeat center center fixed;
             background-size: cover;
             margin: 0;
             padding: 0;
@@ -56,7 +56,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="/mnt/data/asdasfasf.png" alt="Cuties SMP Logo">
+        <img src="cuties.png" alt="Cuties SMP Logo">
         <h1>Cuties SMP Rules</h1>
         <ul>
             <li>Strength 2 and Speed 2 potions are not allowed. Level 1 potions are permitted.</li>
