--- a/rules.html
+++ b/rules.html
@@ -60,6 +60,8 @@
         <h1>Cuties SMP Rules</h1>
         <ul>
             <li>Strength 2 and Speed 2 potions are not allowed. Level 1 potions are permitted.</li>
+             <li>4 Pearl limit.</li>
+             <li>No netherite items (except tools) and no totems of undying.</li>
             <li>Regearing is allowed.</li>
             <li>TNT minecarts are allowed, but crystals, anchors, and bed bombs are not.</li>
             <li>Debuff potions are allowed, except for Weakness potions.</li>
