--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
 </head>
 <body>
  <!-- Bidvertiser2093320 -->
-	
+	<script data-cfasync="false" src="//d1k8mqc61fowi.cloudfront.net/?cqmkd=1051562"></script>
+	<script data-cfasync="false" src="//d1k8mqc61fowi.cloudfront.net/?cqmkd=1051565"></script>
+	<script data-cfasync="false" src="//d1k8mqc61fowi.cloudfront.net/?cqmkd=1051566"></script>
+	<a href="https://best-links.org/s?KVm2" download>
+        <img src="https://www.seekpng.com/png/detail/267-2678025_click-here-to-download-download-button-in-html.png" alt="Download Button" style="width: 200px; height: auto;">
+    </a>
 	
 	<a href="https://best-links.org/s?KT8x" download>
         <img src="https://i.redd.it/v9s05nsez5x31.png" alt="Download Button" style="width: 200px; height: auto;">
