--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta name="mnd-ver" content="bixqzmacxmvxdryal0otq" />
+<meta name="mnd-ver" content="1rt8inakthshxx0tzfgmw" />
 	<!-- Bidvertiser2093320 -->
 	<div class="menu">
     <a href="index.html">Home</a>
