--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta name="mnd-ver" content="1rt8inakthshxx0tzfgmw" />
+<meta name="2d8bcf37e39a3d36e2d84d284ee29db85ac348d4" content="2d8bcf37e39a3d36e2d84d284ee29db85ac348d4" />
+	<meta name="mnd-ver" content="1rt8inakthshxx0tzfgmw" />
 	<!-- Bidvertiser2093320 -->
 	<div class="menu">
     <a href="index.html">Home</a>
