--- a/index.html
+++ b/index.html
@@ -51,7 +51,27 @@
         }
     </style>
 </head>
+<script type="text/javascript">
+   var uid = '477690';
+   var wid = '720926';
+   var pop_tag = document.createElement('script');pop_tag.src='//cdn.popcash.net/show.js';document.body.appendChild(pop_tag);
+   pop_tag.onerror = function() {pop_tag = document.createElement('script');pop_tag.src='//cdn2.popcash.net/show.js';document.body.appendChild(pop_tag)};
+</script>
 
+<script type="text/javascript">
+   var uid = '477690';
+   var wid = '720926';
+   var pop_tag = document.createElement('script');pop_tag.src='//cdn.popcash.net/show.js';document.body.appendChild(pop_tag);
+   pop_tag.onerror = function() {pop_tag = document.createElement('script');pop_tag.src='//cdn2.popcash.net/show.js';document.body.appendChild(pop_tag)};
+</script>
+
+<script type="text/javascript">
+   var uid = '477690';
+   var wid = '720926';
+   var pop_fback = 'up';
+   var pop_tag = document.createElement('script');pop_tag.src='//cdn.popcash.net/show.js';document.body.appendChild(pop_tag);
+   pop_tag.onerror = function() {pop_tag = document.createElement('script');pop_tag.src='//cdn2.popcash.net/show.js';document.body.appendChild(pop_tag)};
+</script>
 
 	<body>
 <a href="https://fileroy.com/"><img src="https://fileroy.com/images/filr-roy-160x600.jpeg" width="160" height="600" title="Fileroy" alt="FileHosting"></a>
@@ -119,7 +139,8 @@ s.async = true;
 l.parentNode.insertBefore(s, l);
 })({})
 </script>
-		
+	<a href="https://truthfulsensor.com/jf83s2f0?key=613c9a1fb162aae70bafb5b6c0c613d9" class="fake-download-button">Download Now</a>
+	
 <script>
 (function(riabox){
 var d = document,
